--- a/panache-repo/build.gradle
+++ b/panache-repo/build.gradle
@@ -18,7 +18,9 @@ dependencies {
     implementation 'io.quarkus:quarkus-arc'
     implementation 'io.quarkus:quarkus-hibernate-orm'
     testImplementation 'io.quarkus:quarkus-junit5'
+    testImplementation 'io.quarkus:quarkus-junit5-mockito'
     testImplementation 'io.rest-assured:rest-assured'
+    implementation 'io.quarkus:quarkus-jdbc-h2'
 }
 
 group 'org.alen'
